trunk/Archive/4ba5507dd46554f510e842ccc10d8ecd-70623f004f453902826afefa0b5bce73/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp -std=c++11
main.cpp: In function ‘int main()’:
main.cpp:25:4: error: static assertion failed: ...
    static_assert(is_prime(1000000006), "...");  // Computed at compile-time
    ^
